--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link type="text/javascript" href="script.js">
+    <script src="JSON.js"> </script>
+    <script defer src="script.js"> </script>
     <title>Eindopdracht filmzoeker</title>
 </head>
 
@@ -28,4 +29,5 @@
     </div>
     <br>
     <p>gemaakt door: Valentijn Andre de la Porte</p>
+
 </body>
